
    o	The argument f= to showMethods() can be an expression evaluating
	to a generic function, allowing methods to be shown for
	non-exported generics and other nonstandard cases.

    o	sprintf() now supports '%o' for octal conversions.

    o	New function Sys.readlink() for information about symbolic
	links, including if a file is a symbolic link.


REGULAR EXPRESSIONS

    o	A different regular expression engine is used for basic and
	extended regexps and is also for approximate matching.  This is
	based on the TRE library of Ville Laurikari, a modifed copy of
	which is included in the R sources.

	This is often faster, especially in a MBCS locale.

	Some known differences are that it is less tolerant of invalid
	inputs in MBCS locales, and in its interpretation of undefined
	(extended) regexps such as "^*".  Also, the interpretation of
	ranges such as [W-z] in caseless matching is no longer to map
	the range to lower case.

	This engine may in future be used in 'literal' mode for fixed
	= TRUE, and there is a compile-time option in src/main/grep.c
	to do so.

    o	The use of repeated boundary regexps in gsub() and gregexpr() as
	warned about in the help page does not work in this engine (it
	did in the previous one since 2005).

    o	Extended (and basic) regexps now support same set of options as
	for fixed = TRUE and perl = TRUE, including 'useBytes' and
	support for UTF-8-encoded strings in non-UTF-8 locales.

    o	agrep() now has full support for MBCS locales with a modest
	speed penalty.  This enables help.search() to use approximate
	matching character-wise rather than byte-wise.

    o	[g]sub use a single-pass algorithm instead of matching twice
	and so is usually faster.

    o	The perl = TRUE versions now work correctly in a non-UTF-8 MBCS
	locale, by translating the inputs to UTF-8.

    o	useBytes = TRUE now inhibits the translation of inputs with
	marked encodings.

    o	strsplit() gains a 'useBytes' argument.
